--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-Django==3.1.4
-django-bootstrap4==2.3.1
-plotly~=4.14.1
-Pillow==8.1.0
-django-cleanup==5.1.0
-django-registration==3.1.1
-
+django-bootstrap4==3.0.1
+plotly==5.1.0
+Pillow==8.3.1
+django-cleanup==5.2.0
+django-registration==3.2
+Django~=3.2.5
