--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-django-bootstrap4==3.0.1
 plotly==5.1.0
 Pillow==8.3.1
 django-cleanup==5.2.0
 django-registration==3.2
 Django~=3.2.5
+django-bootstrap-v5==1.0.4
