--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-plotly==5.1.0
-Pillow==8.3.1
-django-cleanup==5.2.0
-django-registration==3.2
-Django~=3.2.5
-django-bootstrap-v5==1.0.4
-python-dotenv==0.19.0
+plotly
+Pillow
+django-cleanup
+django-registration
+Django
+django-bootstrap-v5
+python-dotenv
+mysqlclient
