--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ media/votings/*
 !media/votings/.gitkeep
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
-# <django-project-name>/static/
+static
 
 ### Django.Python Stack ###
 # Byte-compiled / optimized / DLL files
