--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-plotly
-Pillow
-django-cleanup
-django-registration
-Django
-django-bootstrap-v5
-python-dotenv
-mysqlclient
-gunicorn
+plotly==5.6.0
+Pillow==8.3.1
+django-cleanup==5.2.0
+django-registration==3.2
+Django==3.2.9
+django-bootstrap-v5==1.0.4
+python-dotenv==0.19.0
+mysqlclient==2.0.3
+gunicorn==20.1.0
